# neutronote

./: .gitignore  README.md  install.sh  pyproject.toml
.github/: copilot-instructions.md
docs/: PLAN.md  PVLOG_PLAN.md  easyStart.md
multinote/: __init__.py  app.py  models.py
multinote/routes/: entries.py
multinote/services/: __init__.py  data.py  metadata.py
multinote/static/css/: style.css
multinote/templates/: base.html
multinote/templates/entries/: _entry_card.html  _image_content.html  detail.html  edit.html  index.html
neutronote/: __init__.py  app.py  models.py
neutronote/instruments/: __init__.py
neutronote/instruments/ref_l/: __init__.py  pv_aliases.py
neutronote/instruments/snap/: __init__.py  pv_aliases.py
neutronote/routes/: entries.py
neutronote/services/: data.py  kernel.py  metadata.py  pdf_export.py  pvlog.py
neutronote/static/css/: style.css
neutronote/templates/: base.html
neutronote/templates/entries/: _code_content.html  _data_content.html  _entry_card.html  _header_content.html  _pvlog_content.html  detail.html  edit.html  index.html
tests/: test_app.py  test_optional_state.py
