[project]
name = "neutronote"
version = "0.1.0"
description = "Web-based e-lab notebook for time-sequenced experiment entries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-login>=0.6",
    "flask-wtf>=1.2",
    "python-dotenv>=1.0",
    "plotly>=5.18",
    "pandas>=2.1",
    "markdown>=3.5",
    "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "black>=24.1",
]

[project.scripts]
neutronote = "neutronote.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------- Pixi configuration ----------
[tool.pixi.project]
name = "neutronote"
channels = [
    "conda-forge",
    "mantid/label/nightly",
    "mantid-ornl",
    "neutrons",
    "oncat",
]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
flask = ">=3.0"
flask-sqlalchemy = ">=3.1"
flask-login = ">=0.6"
flask-wtf = ">=1.2"
python-dotenv = ">=1.0"
plotly = ">=5.18"
pandas = ">=2.1"
markdown = ">=3.5"
h5py = ">=3.10"
# Mantid/SNAPRed for loading reduced data
snapred = ">2.0.0"

[tool.pixi.pypi-dependencies]
gunicorn = ">=21.0"
# snapwrap installed from local path for development
snapwrap = { path = "/SNS/SNAP/shared/Malcolm/code/forks/SNAPWrap", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.1"
ruff = ">=0.2"
black = ">=24.1"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
dev = "pkill -f 'flask.*neutronote' 2>/dev/null; sleep 0.5; flask --app neutronote.app run --debug"
test = "pytest -q tests/"
lint = "ruff check neutronote tests"
fmt = "black neutronote tests"

# ---------- Tool configs ----------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
